# musicplatform

./: README.md  pyproject.toml
albums/: models.py
albums/migrations/: 0001_initial.py
artists/: models.py
artists/migrations/: 0001_initial.py
musicplatform/: settings.py
